Bug 129394 - The calc input handling / input bar is broken (I believe) on iOS (app version 4.2)
Summary: The calc input handling / input bar is broken (I believe) on iOS (app version...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: iOS Editor (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other other
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.5.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-12-13 20:02 UTC by Nicolas Christener
Modified: 2020-01-14 15:06 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Printscreen showing the issue (144.13 KB, image/png)
2019-12-13 20:07 UTC, Nicolas Christener
Details
Video demonstrating the issue (1.02 MB, video/mp4)
2019-12-13 20:08 UTC, Nicolas Christener
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Christener 2019-12-13 20:02:09 UTC
Description:
The input bar that shows what a cell contains and can be used to edit the content of a cell seems to be broken on iOS (app version 4.2).

The input field is not displayed and when starting to insert a formula, strange things happen.

Steps to Reproduce:
1. Create/open a spreadsheet on iOS (app version 4.2)
2. select a cell and start to type e.g. =sum(
3. check what the input bar shows

Actual Results:
1.) The input bar is not visible at all
2.) after typing "=s" the whole app starts to do strange things

Expected Results:
The input bar should be visible and entering formulas should work as expected.


Reproducible: Always


User Profile Reset: No



Additional Info:
Tested with 4.2 (25) on iOS 13.3.x
Comment 1 Nicolas Christener 2019-12-13 20:07:21 UTC
Created attachment 156577 [details]
Printscreen showing the issue

1.) the input bar is not showing at all
2.) after typing "=s" strange things happen:
- typing is not possible anymore
- tapping on the sheet suddenly leads to a pink area
Comment 2 Nicolas Christener 2019-12-13 20:08:16 UTC
Created attachment 156578 [details]
Video demonstrating the issue

1.) the input bar is missing
2.) after typing "=s" the app starts to do strange things
Comment 3 How can I remove my account? 2019-12-18 12:29:27 UTC
Yep. That stuff seems a bit unusable in web-based online, too, at the moment.
Comment 4 How can I remove my account? 2019-12-20 09:49:38 UTC
The formula input bar shows up with https://gerrit.libreoffice.org/#/c/85522/ .

Other weirdness after typing = not fixed by that.
Comment 5 Commit Notification 2019-12-20 11:04:39 UTC
Marco Cecchetti committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fd603be25f4c86b5a17658a35f3be548252d912f

tdf#129394: Create formula bar also in non-DESKTOP case

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2020-01-13 14:33:30 UTC
Moving to NEW as agreed in the ESC meeting
Comment 7 Nicolas Christener 2020-01-14 14:51:54 UTC
Tested in 4.2 (30). This issue is fixed and can be closed.

Thanks a lot to the Collabora team and especially to Tor and Marco for taking care of this.