tdf#129394: Create formula bar also in non-DESKTOP case

Having SfxWorkWindow::bIsFullScreen set to true prevented the formula
bar from being created.

Change-Id: I17196aae270e67ab1eb960dd42f4ebb4e0ae86b1
Reviewed-on: https://gerrit.libreoffice.org/85522
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Tor Lillqvist <tml@collabora.com>
(cherry picked from commit da91403315f76ae36da6db6729f5b2a2870e3aa2)